--- a/EvaluatorNew/Evaluator/Evaluator/Evaluator.csproj
+++ b/EvaluatorNew/Evaluator/Evaluator/Evaluator.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,8 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BigDecimal.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="Element.cs" />
+    <Compile Include="Enums.cs" />
+    <Compile Include="Functions.cs" />
+    <Compile Include="InputVerifier.cs" />
+    <Compile Include="ParseException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Expression.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
